test/parser/no_main_function.yl
// RUN: cxx-comp %s 2>&1 -ast-dump | FileCheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: main function not found
